fix safari recipe index alignment issue

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -238,6 +238,7 @@ a:hover {
   position: relative;
   margin: 10px 10px;
   display: inline-block;
+  vertical-align: bottom;
   height: 250px;
   width: 250px;
   padding: 0px 0px;
@@ -249,9 +250,9 @@ a:hover {
   position: relative;
   margin: 10px 10px;
   display: inline-block;
+  vertical-align: bottom;
   height: 250px;
   width: 250px;
-  padding: 0px 0px;
   overflow: hidden;
   cursor: pointer;
   opacity: 0.8;
@@ -262,10 +263,8 @@ a:hover {
 .recipe-index-item-title-label {
   width: 100%;
   color: #FAE3B1;
-  background-color: #53301F;
+  background-color: #7A8443;
   font-size: 15px;
-  // margin-left: 5px;
-  // margin-right: 5px;
 }
 
 .recipe-index-item-author-label {
@@ -273,10 +272,10 @@ a:hover {
   position: absolute;
   bottom: 0px;
   font-size: 13px;
-  // margin-left: 5px;
-  // margin-right: 5px;
-  color: #FAE3B1;
-  background-color: #53301F;
+  text-align: right;
+  padding-right: 4.5px;
+  color: #2A1E13;
+  background-color: #7A8443;
 }
 
 .add-recipe-link-text {
